# CTG1371

./: .gitignore  CHANGELOG.md  CTG1371.cabal  Haskeleton.hs  Makefile  README.md
benchmark/: Bench.hs  CTG1371Bench.hs
executable/: Main.hs
test-suite/: CTG1371Spec.hs  CTG1371Spec.hs_save  EncoderSpec.hs  HPC.hs
