author:
    Dan Plubell
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    -- TODO
    Other
copyright:
    2015 Dan Plubell <danplubell@gmail.com>
description:
    Utilities for encoding and parsing cardiotocography data in the 1371 protocol
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE.md
license:
    MIT
maintainer:
    dplubell@cerner.com
name:
    CTG1371
synopsis:
    TODO: Write a package synopsis.
tested-with:
    GHC == 7.8
version:
    0.0.0

library
    build-depends:
        base ==4.*
      , binary-strict >= 0.4.8.1
      , bytestring >= 0.10.4.0
      , binary >= 0.7.1.0
      , fclabels >= 2.0.2.2
    default-language:
        Haskell2010
    exposed-modules:
        Data.CTG1371.Parser
        Data.CTG1371.Encoder
    other-modules:
        Data.CTG1371.Internal.Encoder.Encoders
        Data.CTG1371.Internal.Types
        Data.CTG1371.Internal.Parser.Parsers
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

executable CTG1371
    build-depends:
          base
        , CTG1371 >= 0.0.0
        , bytestring >= 0.10.4.0
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite tests
    build-depends:
          base
        , CTG1371
        , binary-strict >= 0.4.8.1
        , HUnit
        , QuickCheck
        , bytestring >= 0.10.4.0
        , hspec ==2.*
        , binary >= 0.7.1.0
        , fclabels >= 2.0.2.2
    default-language:
        Haskell2010
    ghc-options:
--        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        Data.CTG1371.Internal.Encoder.Encoders
        Data.CTG1371.Internal.Parser.Parsers
        Data.CTG1371.Internal.Types
        Data.CTG1371.Encoder
        Data.CTG1371.Parser
        EncoderSpec
--        CTG1371Spec
    type:
        exitcode-stdio-1.0

test-suite examples
    build-depends:
         base
       , Glob ==0.7.*
       , bytestring >= 0.10.4.0
       , doctest ==0.9.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        DocTest.hs
    type:
        exitcode-stdio-1.0

test-suite coverage
    build-depends:
          base
        , bytestring >= 0.10.4.0
        , process ==1.*
        , regex-compat >=0.90
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HPC.hs
    type:
        exitcode-stdio-1.0

test-suite documentation
    build-depends:
          base
        , bytestring >= 0.10.4.0
        , process
        , regex-compat
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite style
    build-depends:
        base
      , bytestring >= 0.10.4.0
      , hlint ==1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0

benchmark benchmarks
    build-depends:
        base
      , CTG1371
      , bytestring >= 0.10.4.0
    if impl(ghc >=7.8)
        build-depends:
            criterion ==1.*
    if impl(ghc <7.8)
        build-depends:
            criterion ==0.6.*
            , hastache <0.6
            , statistics <0.11
    default-language:
        Haskell2010
    hs-source-dirs:
        benchmark
    main-is:
        Bench.hs
    type:
        exitcode-stdio-1.0
